# MemCtrl

./: .coverage  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/user_data/: memory.db
interfaces/cli/: main.py
memctrl/: __init__.py  config.py  config.yaml  controller.py
memctrl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
memctrl/core/: tiers.py
memctrl/ml/: __init__.py  hindsight_labeler.py  policy_network.py  task_classifier.py
memctrl/models/: __init__.py  chunk.py  session.py  user.py
memctrl/storage/: sqlite_store.py
models/: task_classifier.pt
notebooks/: 01_dataset_processing.ipynb
scripts/: check_data.py  download_datasets.sh  download_real_datasets.py  prepare_task_classifier_data.py  train_task_classifier.py  train_task_classifier_phased.py
tests/: test_controller.py  test_ml.py  test_models.py  test_sqlite_store.py  test_task_classifier.py  test_tiers.py  test_usage.py
tests/data/user_data/: memory.db
